--- a/docker/Dockerfile-app
+++ b/docker/Dockerfile-app
@@ -14,12 +14,12 @@ RUN apt-get -yyy update && apt-get -yyy install java-1.8.0-amazon-corretto-jdk g
 
 RUN mkdir /anvil_data
 
-COPY app /app
-WORKDIR /app
-
+COPY requirements.txt ./
 RUN pip install -r requirements.txt
 RUN anvil-app-server || true
 
+COPY app /app
+WORKDIR /app
+
 RUN useradd anvil && chown -R anvil:anvil /anvil_data
 USER anvil
-
