--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -30,9 +30,9 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
-        uses: ./docker/build-push-action@v3
+        uses: docker/build-push-action@v3
         with:
           context: .
-          file: docker/app/Dockerfile
+          file: ./docker/app/Dockerfile
           push: true
           tags: user/app:latest
