Use default context for dockerfile path

--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -33,6 +33,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./docker/app/Dockerfile
+          file: "{{defaultContext}}/docker/app/Dockerfile"
           push: true
           tags: user/app:latest
