--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -38,4 +38,4 @@ jobs:
           context: .
           file: docker/app/Dockerfile
           push: true
-          tags: ${{ env.REGISTRY }}/user/app:latest
+          tags: ${{ env.REGISTRY }}/anvilistas/anvil-labs-integration-tests:latest
