--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,10 +7,7 @@ services:
   anvil:
     environment:
       - ANVIL_LABS_PATH=${ANVIL_LABS_PATH}
-    build:
-      context: .
-      dockerfile: docker/app/Dockerfile
-      network: host
+    image: ghcr.io/anvilistas/anvil-labs-integration-tests:latest
     ports:
       - 3030:3030
     volumes:
