--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -8,7 +8,7 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-  build-and-push-image:
+  build-and-push-images:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -32,10 +32,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       -
-        name: Build and push
+        name: Build and push app image
         uses: docker/build-push-action@v3
         with:
           context: .
           file: docker/app/Dockerfile
           push: true
-          tags: ${{ env.REGISTRY }}/anvilistas/anvil-labs-integration-tests:latest
+          tags: ${{ env.REGISTRY }}/anvilistas/anvil-labs-integration-tests/app:latest
+      -
+        name: Build and push test_runner image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: docker/test_runner/Dockerfile
+          push: true
+          tags: ${{ env.REGISTRY }}/anvilistas/anvil-labs-integration-tests/test_runner:latest
