--- a/docker/test_runner/Dockerfile
+++ b/docker/test_runner/Dockerfile
@@ -3,3 +3,6 @@ FROM python:3
 COPY docker/test_runner/requirements.txt ./
 RUN pip install -r requirements.txt
 RUN anvil-app-server || true
+
+RUN mkdir /code
+WORKDIR code
