--- a/docker/app/config.yaml
+++ b/docker/app/config.yaml
@@ -1,5 +1,5 @@
 app: /app
-data-dir: /anvil_data
+database: jdbc:postgresql://db/anvil?username=anvil&password=anvil
 uplink-key: uplink-key
 client-uplink-key: client-uplink-key
 auto-migrate: true
