Add readme contents

--- a/env.example
+++ b/env.example
@@ -1,2 +1,2 @@
 # Copy this file to .env in this directory and edit to suit your environment
-ANVIL_LABS_PATH=<path_to_your_local_copy_of_anvil_labs>
+ANVIL_LABS_PATH="<path_to_your_local_copy_of_anvil_labs>"
